use redis-sentinel and fix manifests

--- a/k8s/webhookrelay/templates/deployments/provisioner.yaml
+++ b/k8s/webhookrelay/templates/deployments/provisioner.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: provisioner
-          image: "{{ .Values.provisioner.image.repository }}:{{ .Values.provisioner.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.provisioner.image.repository }}:{{ .Values.provisioner.image.tag }}"
           imagePullPolicy: {{ .Values.provisioner.image.pullPolicy }}
           envFrom:
             - configMapRef:
