--- a/k8s/deploy/webhookrelay.yaml
+++ b/k8s/deploy/webhookrelay.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: webhookrelay
 data:
   ACCESS_SECRET: <replace me>
-  DSN: postgres://postgres:password@postgres:5432/webhookrelay
+  DSN: cG9zdGdyZXM6Ly9wb3N0Z3JlczpwYXNzd29yZEBwb3N0Z3Jlcy5wb3N0Z3Jlcy5zdmMuY2x1c3Rlci5sb2NhbDo1NDMyL3dlYmhvb2tyZWxheQ==
 ---
 # Source: webhookrelay/templates/secrets/secrets.yaml
 apiVersion: v1
@@ -16,7 +16,7 @@ metadata:
   name: webhookrelay-publisher
   namespace: webhookrelay
 data:
-  DSN: postgres://postgres:password@postgres:5432/webhookrelay
+  DSN: cG9zdGdyZXM6Ly9wb3N0Z3JlczpwYXNzd29yZEBwb3N0Z3Jlcy5wb3N0Z3Jlcy5zdmMuY2x1c3Rlci5sb2NhbDo1NDMyL3dlYmhvb2tyZWxheQ==
 ---
 # Source: webhookrelay/templates/secrets/secrets.yaml
 apiVersion: v1
@@ -37,7 +37,7 @@ data:
   ACCESS_ID: 0942aee855760a08fc7ecbb89f40127c.access
   API_ADDR: :8080
   METRICS_ADDR: :8081
-  REDIS_ADDR: redis:6379
+  REDIS_ADDR: sentinel-0.sentinel.redis-sentinel.svc.cluster.local:26379,sentinel-1.sentinel.redis-sentinel.svc.cluster.local:26379,sentinel-2.sentinel.redis-sentinel.svc.cluster.local:26379
   WEBHOOKDISPATCHER_ADDRESS: https://webhookdispatcher.broswen.com
 ---
 # Source: webhookrelay/templates/configmaps/configmaps.yaml
@@ -47,7 +47,7 @@ metadata:
   name: webhookrelay-publisher
   namespace: webhookrelay
 data:
-  BROKERS: broker:9092
+  BROKERS: kafka-clusterip.kafka.svc.cluster.local:9092
   METRICS_ADDR: :8081
   TOPIC: webhooks
 ---
@@ -59,7 +59,7 @@ metadata:
   namespace: webhookrelay
 data:
   ACCESS_ID: 0942aee855760a08fc7ecbb89f40127c.access
-  BROKERS: broker:9092
+  BROKERS: kafka-clusterip.kafka.svc.cluster.local:9092
   GROUP: webhookrelay-provisioner
   METRICS_ADDR: :8081
   TOPIC: webhooks
@@ -140,8 +140,8 @@ spec:
     spec:
       containers:
         - name: api
-          image: "broswen/webhookrelay-api:1.16.0"
-          imagePullPolicy: IfNotPresent
+          image: "broswen/webhookrelay-api:latest"
+          imagePullPolicy: Always
           envFrom:
             - configMapRef:
                 name: webhookrelay-api
@@ -156,11 +156,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /healthcheck
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /healthcheck
               port: http
           resources:
             {}
@@ -185,8 +185,8 @@ spec:
     spec:
       containers:
         - name: provisioner
-          image: "broswen/webhookrelay-provisioner:1.16.0"
-          imagePullPolicy: IfNotPresent
+          image: "broswen/webhookrelay-provisioner:latest"
+          imagePullPolicy: Always
           envFrom:
             - configMapRef:
                 name: webhookrelay-provisioner
@@ -223,8 +223,8 @@ spec:
     spec:
       containers:
         - name: publisher
-          image: "broswen/webhookrelay-publisher:1.16.0"
-          imagePullPolicy: IfNotPresent
+          image: "broswen/webhookrelay-publisher:latest"
+          imagePullPolicy: Always
           envFrom:
             - configMapRef:
                 name: webhookrelay-publisher
