--- a/k8s/webhookrelay/templates/deployments/publisher.yaml
+++ b/k8s/webhookrelay/templates/deployments/publisher.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: publisher
-          image: "{{ .Values.publisher.image.repository }}:{{ .Values.publisher.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.publisher.image.repository }}:{{ .Values.publisher.image.tag }}"
           imagePullPolicy: {{ .Values.publisher.image.pullPolicy }}
           envFrom:
             - configMapRef:
