--- a/k8s/deploy/webhookrelay.yaml
+++ b/k8s/deploy/webhookrelay.yaml
@@ -137,6 +137,10 @@ spec:
       labels:
         app.kubernetes.io/name: webhookrelay
         app.kubernetes.io/instance: api
+      annotations:
+        prometheus.io/path: /metrics
+        prometheus.io/port: "8081"
+        prometheus.io/scrape: "true"
     spec:
       containers:
         - name: api
@@ -182,6 +186,10 @@ spec:
       labels:
         app.kubernetes.io/name: webhookrelay
         app.kubernetes.io/instance: provisioner
+      annotations:
+        prometheus.io/path: /metrics
+        prometheus.io/port: "8081"
+        prometheus.io/scrape: "true"
     spec:
       containers:
         - name: provisioner
@@ -220,6 +228,10 @@ spec:
       labels:
         app.kubernetes.io/name: webhookrelay
         app.kubernetes.io/instance: publisher
+      annotations:
+        prometheus.io/path: /metrics
+        prometheus.io/port: "8081"
+        prometheus.io/scrape: "true"
     spec:
       containers:
         - name: publisher
